--- a/KumAccess/Pages/Groups/Index.cshtml
+++ b/KumAccess/Pages/Groups/Index.cshtml
@@ -349,7 +349,7 @@
 
                 if (!result.success) {
                     alert(`Uyarı: ${result.message}`);
-                    return; // işlemi durdur
+                    return; 
                 }
             }
         }
